--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -20,6 +20,7 @@ jobs:
         run: echo "$GITHUB_CONTEXT" 
      # This workflow step will parse github env. The parsed env will be used in the email body.
      #  MERGE_LOG env holds the request body(PR description) that is parsed to replace \n\r with <br> for html formatting    
+     # This step will be retried if there are any timeouts or issues parsing the json due to timeouts in curl command to get commits url.
       - name: get commits payload
         env:
           COMMIT_URL: ${{github.event.pull_request._links.commits.href}}
