--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -27,7 +27,7 @@ jobs:
         env:
           COMMIT_URL: ${{github.event.pull_request._links.commits.href}}
           LOG: ${{github.event.pull_request.body}}
-          MERGE_SHA: ${{github.event.pull_request.merge_commit_sha}}
+         
         uses: nick-fields/retry@v2
         with:
           max_attempts: 4
@@ -58,7 +58,7 @@ jobs:
               echo "COMPARE_URL= $( echo '${{github.event.repository.html_url}}/compare/${{github.event.pull_request.base.sha}}...${{ github.event.pull_request.merge_commit_sha}}' )" >> $GITHUB_ENV      
               echo "FILES_CHANGED=$(echo '${{github.event.pull_request._links.html.href}}/files' )" >> $GITHUB_ENV
               echo $LOG
-              echo $MERGE_SHA
+               
              
 
       - name: checkout
@@ -68,7 +68,7 @@ jobs:
           fetch-depth: 0    
       - name: get_log
         run: |
-           echo "MERGE_LOG= $(git show 2dbec007040cf5ad4ca3b3740da5adce429864ee) " >> $GITHUB_ENV  
+           echo "MERGE_LOG= $(git show 2dbec007040cf5ad4ca3b3740da5adce429864ee | tail -n +5) " >> $GITHUB_ENV  
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v34
