--- a/compiler/resolution/CMakeLists.txt
+++ b/compiler/resolution/CMakeLists.txt
@@ -21,9 +21,9 @@ set(SRCS
     callDestructors.cpp
     callInfo.cpp
     cleanups.cpp
-    closures.cpp
     cullOverReferences.cpp
     expandVarArgs.cpp
+    fcf-support.cpp
     fixupExports.cpp
     functionResolution.cpp
     generics.cpp
