Move error logging macros and hooks to a separate header
Signed-off-by: David Longnecker <dlongnecke-cray@users.noreply.github.com>

--- a/compiler/main/CMakeLists.txt
+++ b/compiler/main/CMakeLists.txt
@@ -20,6 +20,7 @@ set(SRCS
     commonFlags.cpp
     config.cpp
     driver.cpp
+    error-logging.cpp
     log.cpp
     PhaseTracker.cpp
     runpasses.cpp
