--- a/frontend/test/resolution/CMakeLists.txt
+++ b/frontend/test/resolution/CMakeLists.txt
@@ -47,6 +47,7 @@ comp_unit_test(testParams)
 comp_unit_test(testPoi)
 comp_unit_test(testProcThis)
 comp_unit_test(testRanges)
+comp_unit_test(testReductions)
 comp_unit_test(testResolve)
 comp_unit_test(testReturnTypes)
 comp_unit_test(testScopeResolve)
