add tarfiles generated by the home-brew test to .gitignore
Signed-off-by: bhavanijayakumaran <82669529+bhavanijayakumaran@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -467,5 +467,5 @@ test/types/string/validation/stress.good
 /util/devel/test/vagrant/log2
 /util/devel/test/vagrant/*/*-cloudimg-console.log
 
-/util/packaging/docker/test/*.tar
-/util/cron/*.tar
+/util/packaging/docker/test/*.tar.gz
+/util/cron/*.tar.gz
