revisions to simplify and modernize cmake usage
* remove redundant add_dependencies in tests

* remove redundant include dirs for dyno-tests

* remove redundant include dir from chpl target

* change replace "inlcude_directories" commands
  with target specific versions

* remove intermediate CMakeLists.txt file from
  tools directory since it only called add_subdir
  for chpldoc. Call add_subdirectory on tools/chpldoc
  directly from the higher level file instead

* remove CMakeLists.txt files that were just globbing
  for headers in include directories

* update rules for chpldoc target to remove headers from
  sources and use target_include_directories instead

Signed-off-by: arezaii <ahmad.rezaii@hpe.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ endif()
 ### BEGIN config.h value setting ###
 # Handle all (most?) the versioning information in one place
 # These values will be written to <build_dir>/frontend/include/chpl/config/config.h
+
 set(CHPL_MAJOR_VERSION 1)
 set(CHPL_MINOR_VERSION 30)
 set(CHPL_PATCH_VERSION 0)
@@ -361,7 +362,7 @@ message(STATUS "Using Python: ${CHPL_CMAKE_PYTHON}")
 # message(DEBUG "${CHPL_HOST_BUNDLED_LINK_ARGS} ${CHPL_HOST_SYSTEM_LINK_ARGS}")
 add_subdirectory(compiler)
 add_subdirectory(frontend)
-add_subdirectory(tools)
+add_subdirectory(tools/chpldoc)
 
 # Adjust the install rpath for chpl and chpldoc
 if (INSTALLATION_MODE STREQUAL "prefix")
