refactor common compiler/subdir commands into function
Signed-off-by: arezaii <ahmad.rezaii@hpe.com>

--- a/compiler/AST/CMakeLists.txt
+++ b/compiler/AST/CMakeLists.txt
@@ -65,14 +65,4 @@ set(SRCS
     WhileDoStmt.cpp
     WhileStmt.cpp
    )
-# TODO: These three steps are standard among all the CMakeLists.txt files
-# that are subdirectories of compiler/, maybe factor out to a function in the
-# compiler/CMakeLists.txt?
-target_sources(chpl
-               PUBLIC
-               ${SRCS})
-get_filename_component(DIR_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
-set_property(SOURCE ${SRCS}
-             TARGET_DIRECTORY chpl
-             PROPERTY COMPILE_DEFINITIONS COMPILER_SUBDIR=${DIR_NAME}
-             APPEND)
+add_compiler_sources("${SRCS}" "${CMAKE_CURRENT_SOURCE_DIR}")
