--- a/compiler/main/CMakeLists.txt
+++ b/compiler/main/CMakeLists.txt
@@ -27,11 +27,4 @@ set(SRCS
     LICENSE
     COPYRIGHT
    )
-target_sources(chpl
-               PRIVATE
-               ${SRCS})
-get_filename_component(DIR_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
-set_property(SOURCE ${SRCS}
-             TARGET_DIRECTORY chpl
-             PROPERTY COMPILE_DEFINITIONS COMPILER_SUBDIR=${DIR_NAME}
-             APPEND)
+add_compiler_sources("${SRCS}" "${CMAKE_CURRENT_SOURCE_DIR}")
