--- a/compiler/adt/CMakeLists.txt
+++ b/compiler/adt/CMakeLists.txt
@@ -18,11 +18,4 @@ set(SRCS
     bitVec.cpp
     vec.cpp
    )
-target_sources(chpl
-               PRIVATE
-               ${SRCS})
-get_filename_component(DIR_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
-set_property(SOURCE ${SRCS}
-             TARGET_DIRECTORY chpl
-             PROPERTY COMPILE_DEFINITIONS COMPILER_SUBDIR=${DIR_NAME}
-             APPEND)
+add_compiler_sources("${SRCS}" "${CMAKE_CURRENT_SOURCE_DIR}")
