feat(dyno): begin resolving catch variable
* add function to get Error type for when we are not parsing the
  std library

* add Error type to built-ins

* move specialized functions for getting range, string, and bytes
  types to common area in CompositTypes with new function to get
  Error type

* update call sites for getStringType, getBytesType, and getRangeType

* add throws to untypedfunctionsignature and propagate flag when
  at construction

* add resolution tests for checking that catch error var resovles
  to something that inherits from Error

* add Errors.Error to list of types in isMissingBundledType and move
  isMissingBundledType to CompositeType

* move common helper from testErrors and testCatch to test-resolution

* allow catch vars initialized from throw to skip init-deinit checking

* add an early exit from resolving catch if we are in
  ScopeResolveOnly mode

Signed-off-by: arezaii <ahmad.rezaii@hpe.com>

--- a/frontend/test/resolution/CMakeLists.txt
+++ b/frontend/test/resolution/CMakeLists.txt
@@ -59,3 +59,4 @@ comp_unit_test(testTypeConstruction)
 comp_unit_test(testTypeOperators)
 comp_unit_test(testTypeQueries)
 comp_unit_test(testVarArgs)
+comp_unit_test(testCatch)
