Rename the `parse` pass to `parseAndConvertUast`.
Signed-off-by: Danila Fedorin <daniel.fedorin@hpe.com>

--- a/compiler/passes/CMakeLists.txt
+++ b/compiler/passes/CMakeLists.txt
@@ -18,8 +18,8 @@ set(SRCS
     addInitGuards.cpp
     buildDefaultFunctions.cpp
     checkNormalized.cpp
-    checkParsed.cpp
     checkResolved.cpp
+    checkUast.cpp
     cleanup.cpp
     convert-uast.cpp
     createTaskFunctions.cpp
