--- a/compiler/passes/Makefile.share
+++ b/compiler/passes/Makefile.share
@@ -23,8 +23,8 @@ PASSES_SRCS =                                              \
         addInitGuards.cpp                                  \
         buildDefaultFunctions.cpp                          \
         checkNormalized.cpp                                \
-        checkParsed.cpp                                    \
         checkResolved.cpp                                  \
+        checkUast.cpp                                      \
         cleanup.cpp                                        \
         convert-uast.cpp                                   \
         createTaskFunctions.cpp                            \
