--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Get merge log
         id: merge-log
         run: |
-              echo "MERGE= $(git show 036bd184ae  | tail -n +5 )"  >> $GITHUB_ENV    
+              echo "MERGE= $(echo '$(git show 036bd184ae)'  | tail -n +5 )"  >> $GITHUB_ENV    
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v34
