--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Get merge log
         id: merge-log
         run: |
-              echo "MERGE=$(echo '$(git show 036bd184ae)  | tail -n +5 ')"  >> $GITHUB_ENV    
+              echo "MERGE=$('git show 036bd184ae'  | tail -n +5 )"  >> $GITHUB_ENV    
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v34
@@ -111,6 +111,6 @@ jobs:
                    ${{env.DELETED}} 
            
            # Optional converting Markdown to HTML (set content_type to text/html too):
-           #convert_markdown: true
+           convert_markdown: false
            # Optional priority: 'high', 'normal' (default) or 'low'
            priority: low
