Add C++ test of resolving field access with inheritance
---
Signed-off-by: Michael Ferguson <mppf@users.noreply.github.com>

--- a/frontend/test/resolution/CMakeLists.txt
+++ b/frontend/test/resolution/CMakeLists.txt
@@ -36,6 +36,7 @@ comp_unit_test(testLocation)
 comp_unit_test(testLoopIndexVars)
 comp_unit_test(testMaybeConst)
 comp_unit_test(testMethodCalls)
+comp_unit_test(testMethodFieldAccess)
 comp_unit_test(testMultiDecl)
 comp_unit_test(testNew)
 comp_unit_test(testOperatorOverloads)
