--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -55,10 +55,10 @@ jobs:
         # To get git diff on the files that were changed in the PR checkout with fetch-depth 2.
         with:
           fetch-depth: 0 
-      - name: Get merge log
-        id: merge-log
-        run: |
-              echo "MERGE=$(echo '$(git show 036bd184ae  | tail -n +5 )' )"  >> $GITHUB_ENV    
+      # - name: Get merge log
+      #   id: merge-log
+      #   run: |
+      #         echo "MERGE=$(echo '$(git show 036bd184ae  | tail -n +5 )' )"  >> $GITHUB_ENV    
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v34
