--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -89,28 +89,33 @@ jobs:
            subject: "[Chapel Merge] ${{github.event.pull_request.title}}"
            # Required recipients' addresses:
            #to: chapel+commits@discoursemail.com
-           to: Bhavani@hpe.com
+           to: bhavani@hpe.com
            # Required sender full name (address can be skipped):
-           from:  Bhavani@hpe.com
-           body: |             
-              Branch: ${{github.ref}} 
-              Revision: ${{ github.event.pull_request.merge_commit_sha }}  
-              Author: ${{ env.AUTHOR}} 
-              Link: ${{github.event.pull_request._links.html.href}}          
-              Log Message: 
-                          ${{env.MERGE}}
-                          ${{env.MESSAGE}} 
-                          ${{env.MERGE_LOG}} 
-              Compare: ${{env.COMPARE_URL}} 
-              Diff: ${{github.event.pull_request.diff_url}} 
-              Modified Files: 
-                   ${{env.MODIFIED}} 
-              Added Files: 
-                   ${{env.ADDED}} 
-              Removed Files:  
-                   ${{env.DELETED}} 
-           
+           from:  ${{env.AUTHOR}}
+           html_body: |
+              <!DOCTYPE html>
+              <html>
+              <body>
+              <p>
+              Branch: ${{github.ref}} <br>
+              Revision: ${{ github.event.pull_request.merge_commit_sha }}  <br>
+              Author: ${{ env.AUTHOR}} <br>
+              Link: ${{github.event.pull_request._links.html.href}} <br>             
+              Log Message: <br><br>
+                           ${{env.MESSAGE}} <br> 
+                          ${{env.MERGE_LOG}} <br>
+              Compare: ${{env.COMPARE_URL}} <br> 
+              Diff: ${{github.event.pull_request.diff_url}} <br>
+              Modified Files: <br>
+                   ${{env.MODIFIED}} <br><br>
+              Added Files: <br>
+                   ${{env.ADDED}} <br><br>    
+              Removed Files: <br>     
+                   ${{env.DELETED}} <br>
+              </p>
+              </body>
+              </html>
            # Optional converting Markdown to HTML (set content_type to text/html too):
-           convert_markdown: false
+           convert_markdown: true
            # Optional priority: 'high', 'normal' (default) or 'low'
            priority: low
