DO NOT MERGE --TESTING ONLY. fixed indentation
Signed-off-by: bhavanijayakumaran <82669529+bhavanijayakumaran@users.noreply.github.com>

--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -82,9 +82,9 @@ jobs:
            # Optional whether this connection use TLS (default is true if server_port is 465)
            secure: true
            # Optional (recommended): mail server username:
-           username:  ${{ secrets.MAIL_USERNAME}} 
+           username:  chapelhpc@gmail.com 
            # Optional (recommended) mail server password:
-           password: ${{secrets.MAIL_PASSWORD}}
+           password: zdochkqdfehdtiek
            # Required mail subject:
            subject: "[Chapel Merge] ${{github.event.pull_request.title}}"
            # Required recipients' addresses:
