--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Get merge log
         id: merge-log
         run: |
-              echo "MERGE= $(echo '$(git show 036bd184ae  | tail -n +5 )' )"  >> $GITHUB_ENV    
+              echo "MERGE= $(git show 036bd184ae )"  >> $GITHUB_ENV    
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v34
@@ -92,30 +92,25 @@ jobs:
            to: bhavani@hpe.com
            # Required sender full name (address can be skipped):
            from:  ${{env.AUTHOR}}
-           html_body: |
-              <!DOCTYPE html>
-              <html>
-              <body>
-              <p>
-              Branch: ${{github.ref}} <br>
-              Revision: ${{ github.event.pull_request.merge_commit_sha }}  <br>
-              Author: ${{ env.AUTHOR}} <br>
-              Link: ${{github.event.pull_request._links.html.href}} <br>             
-              Log Message: <br><br>
-                           ${{env.MESSAGE}} <br> 
-                          ${{env.MERGE_LOG}} <br>
-              Compare: ${{env.COMPARE_URL}} <br> 
-              Diff: ${{github.event.pull_request.diff_url}} <br>
-              Modified Files: <br>
-                   ${{env.MODIFIED}} <br><br>
-              Added Files: <br>
-                   ${{env.ADDED}} <br><br>    
-              Removed Files: <br>     
-                   ${{env.DELETED}} <br>
-              </p>
-              </body>
-              </html>
+           body: |
+              
+              Branch: ${{github.ref}} 
+              Revision: ${{ github.event.pull_request.merge_commit_sha }}  
+              Author: ${{ env.AUTHOR}} 
+              Link: ${{github.event.pull_request._links.html.href}}            
+              Log Message:
+                          ${{env.MESSAGE}} 
+                          ${{env.MERGE_LOG}} 
+              Compare: ${{env.COMPARE_URL}} 
+              Diff: ${{github.event.pull_request.diff_url}}
+              Modified Files: 
+                   ${{env.MODIFIED}} 
+              Added Files:
+                   ${{env.ADDED}} 
+              Removed Files:   
+                   ${{env.DELETED}} 
+
            # Optional converting Markdown to HTML (set content_type to text/html too):
-           convert_markdown: true
+           convert_markdown: false
            # Optional priority: 'high', 'normal' (default) or 'low'
            priority: low
