DO NOT MERGE --TESTING ONLY. fixed indentation
Signed-off-by: bhavanijayakumaran <82669529+bhavanijayakumaran@users.noreply.github.com>

--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -59,7 +59,7 @@ jobs:
         id: merge-log
         run: |
               echo $(git show 036bd184ae)
-              echo "MERGE= $(echo $(git show 036bd184ae | tail -n +5 ) )"  >> $GITHUB_ENV    
+              echo "MERGE= $(echo "$(git show 036bd184ae | tail -n +5 )" )"  >> $GITHUB_ENV    
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v34
