--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -58,9 +58,9 @@ jobs:
       - name: Get merge log
         id: merge-log
         run: |
-              merge_log=$(git show 036bd184ae)
+              merge_log=$(git show 036bd184ae | tail -n +5)
               echo "$merge_log" 
-              echo "MERGE= "$(echo $(git show 036bd184ae | tail -n +5 ) ")"  >> $GITHUB_ENV    
+              echo "$merge_log"  >> $GITHUB_ENV    
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v34
