--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -59,9 +59,8 @@ jobs:
         id: merge-log
         run: |
               merge_log=$(git show 036bd184ae | tail -n +5)
-              echo $merge_log
               echo "$merge_log" 
-              echo $merge_log  >> $GITHUB_ENV    
+              echo "MERGE="$merge_log" "  >> $GITHUB_ENV    
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v34
