--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -61,10 +61,10 @@ jobs:
               merge_log=$(git show 036bd184ae | tail -n +5)
               
               echo "$merge_log" 
-              merge_log="${merge_log//'%'/'%25'}"
-              merge_log="${merge_log//$'\n'/'%0A'}"
-              merge_log="${merge_log//$'\r'/'%0D'}"
-              echo "MERGE=$(echo $merge_log )"  >> $GITHUB_ENV    
+              echo 'MERGE<<EOF' >> $GITHUB_ENV
+              echo "$merge_log" >> $GITHUB_ENV
+              echo 'EOF' >> $GITHUB_ENV
+                 
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v34
